changes to the rendering system