@@ -13,9 +13,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>15</source>
-                    <target>15</target>
+                    <source>16</source>
+                    <target>16</target>
                     <compilerArgs>--enable-preview</compilerArgs>
+                    <compilerArgs>--add-modules jdk.incubator.foreign</compilerArgs>
+                    <compilerArgs>-Dforeign.restricted=permit</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
@@ -23,9 +25,9 @@
 
     <properties>
         <lwjgl.version>3.2.3</lwjgl.version>
-        <imgui.java.version>1.81.0</imgui.java.version>
-        <maven.compiler.source>1.15</maven.compiler.source>
-        <maven.compiler.target>1.15</maven.compiler.target>
+        <imgui.java.version>1.82.1</imgui.java.version>
+        <maven.compiler.source>1.16</maven.compiler.source>
+        <maven.compiler.target>1.16</maven.compiler.target>
     </properties>
 
     <dependencyManagement>
@@ -44,7 +46,7 @@
         <dependency>
             <groupId>org.joml</groupId>
             <artifactId>joml</artifactId>
-            <version>1.10.0</version>
+            <version>1.10.1</version>
         </dependency>
 
         <dependency>
